# hunter_client

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: interaction_workflow.py
hunter_client/: __init__.py  client.py  constants.py  exceptions.py  storage_interface.py
hunter_client/client/: __init__.py  client.py
hunter_client/client/endpoint_handlers/: __init__.py  base.py  domain_and_name_searcher.py  domain_searcher.py  email_counter.py  email_verifier.py
hunter_client/endpoint_handlers/: base.py  domain_and_name_searcher.py  domain_searcher.py  email_counter.py  email_verifier.py  mappers.py  presenters.py  response_models.py
hunter_client/endpoint_handlers/response_models/: __init__.py  data.py  meta.py  models.py
hunter_client/models/: __init__.py  base.py  exceptions.py  lateinit.py  models.py
hunter_client/services/: __init__.py  email_validation.py
hunter_client/services/response_models/: __init__.py  components.py  data.py  meta.py  meta_params.py  models.py
hunter_client/storages/: __init__.py  dummy.py
tests/: conftest.py  test_client.py  test_client_raises_exceptions.py  test_client_with_nonexistent_inputs.py  test_services.py  test_storage.py
tests/mock_responses/: failed.py  successful.py
