[tool.poetry]
name = "Hunter.io API client."
version = "0.1.0"
description = ""
authors = ["No Body <at@no.where>"]
readme = "README.md"
packages = [{include = "hunter_client"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
poethepoet = "^0.24.4"
pytest = "^7.4.3"
requests-mock = "^1.11.0"
types-requests = "^2.31.0.10"
wemake-python-styleguide = "^0.18.0"

[tool.poe.tasks]
lint = "flake8 hunter_client/**/*.py tests/**/*.py examples/**/*.py"
typecheck = "mypy hunter_client/**/*.py tests/**/*.py examples/**/*.py"
test = "pytest tests/"
check-all = ["lint", "typecheck", "test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
